[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AGISwarm.text2image_ms"
dynamic = ["version"]
description = "Python template project"
readme = "README.md"

requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["sample", "setuptools", "development"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'numpy<2.0.0',
    "flask",
    "pillow",
    "diffusers",
    "torch",
    "deepspeed",
    "hydra-core",
    "fastapi",
    "pillow"
]
[project.optional-dependencies]
test = ['pytest']
analyze = ['pyright', 'pylint', 'bandit', 'black', 'isort']
build = ['setuptools', 'wheel', 'build']
publish = ['twine']


[tool.setuptools.dynamic]
version = { file = "VERSION" }


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
text2image_ms = ["py.typed"]
