[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AGISwarm.text2image_ms"
dynamic = ["version"]
description = "Python template project"
readme = "README.md"

requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["sample", "setuptools", "development"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'numpy<2.0.0',
    "pillow",
    "diffusers",
    "torch",
    "hydra-core",
    "fastapi",
    "pillow",
    "uvicorn",
    "nest_asyncio",
    "AGISwarm.asyncio_queue_manager"
]
[project.optional-dependencies]
test = ['pytest']
analyze = ['pyright', 'pylint', 'bandit', 'black', 'isort']
build = ['setuptools', 'wheel', 'build']
publish = ['twine']


[tool.setuptools.dynamic]
version = { file = "VERSION" }


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
text2image_ms = ["py.typed"]

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = "wrong-import-order"